--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tree",
-  "name": "tree.nathanfriend.io",
+  "name": "https://id1945.github.io/tree-online",
   "start_url": ".",
   "icons": [
     {
