Create react app

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tree",
-  "name": "https://id1945.github.io/tree-online",
+  "name": "tree.nathanfriend.io",
   "start_url": ".",
   "icons": [
     {
